Other necessary update

--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
-PORT = 5000
-APIKEY = 
+PORT=5000
+APIKEY=Dannys-notepad_StoryStream-api
+DB_HOST=localhost
+DB_USER=root
+DB_PASSWORD=""
+DB_DATABASE=StoryStream-api
