--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
+
   "name": "storystream-api",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "node --watch --env-file=.env server.js"
+    "dev": "node --watch server.js"
   },
   "keywords": [],
   "author": "",
