--- a/package.json
+++ b/package.json
@@ -1,24 +1,48 @@
 {
 
   "name": "storystream-api",
+
   "version": "1.0.0",
+
   "main": "server.js",
+
   "scripts": {
+
     "start": "node server.js",
+
     "dev": "node --watch server.js"
+
   },
+
   "keywords": [],
+
   "author": "",
+
   "license": "ISC",
+
   "description": "",
+
   "dependencies": {
+
     "bcryptjs": "^2.4.3",
+
     "body-parser": "^1.20.2",
+
     "cookie-parser": "^1.4.6",
+
     "dotenv": "^16.4.5",
+
     "ejs": "^3.1.10",
+
     "express": "^4.19.2",
+
     "express-session": "^1.18.0",
+
+    "express-validator": "^7.1.0",
+
     "mysql": "^2.18.1"
+
   }
+
 }
+
